# grimoire

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
example/: config.yml  entry.templ.html  homepage.templ.html  index.yml
example/blog/: entry1.yml  entry2.yml
external_module_test/: __init__.py
grimoire/: __main__.py
grimoiressg/: __main__.py  arguments.py  config.py  content_files.py  scripts.py
grimoiressg/modules/: __init__.py  markdown.py  sitemaps.py  tags.py  templating.py
grimoiressg/utils/: __init__.py  files.py  logger.py
